# Rust-CLI

./: README.md
rust_cli/: Cargo.toml  testfile.csv  testfile.xlsx
rust_cli/src/: main.rs
