[package]
name = "rust_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"

[[bin]]
name = "rust_cli"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
